test/libhyperion/syntaxTests/structs/recursion/recursive_struct_function_pointer.hyp
pragma abicoder               v2;
contract C {
    struct S {
        uint a;
        function() external returns (S memory) sub;
    }
    function f() public pure returns (S memory) {
    }
}
// ----
// TypeError 4888: (115-123): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
